# docs/swagger.json
@@ -796,6 +796,17 @@
                         "description": "text",
                         "name": "filters[text]",
                         "in": "query"
+                    },
+                    {
+                        "enum": [
+                            "junior",
+                            "middle",
+                            "senior"
+                        ],
+                        "type": "string",
+                        "description": "grade",
+                        "name": "filters[grade]",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -1730,6 +1741,19 @@
         }
     },
     "definitions": {
+        "def.GradeName": {
+            "type": "string",
+            "enum": [
+                "junior",
+                "middle",
+                "senior"
+            ],
+            "x-enum-varnames": [
+                "GradeJunior",
+                "GradeMiddle",
+                "GradeSenior"
+            ]
+        },
         "dto.Pagination": {
             "type": "object",
             "properties": {
@@ -1806,6 +1830,9 @@
                 },
                 "created_at": {
                     "type": "string"
+                },
+                "grade": {
+                    "$ref": "#/definitions/def.GradeName"
                 },
                 "id": {
                     "type": "string"
@@ -1970,11 +1997,20 @@
             "type": "object",
             "required": [
                 "category_id",
+                "grade",
                 "text"
             ],
             "properties": {
                 "category_id": {
                     "type": "string"
+                },
+                "grade": {
+                    "type": "string",
+                    "enum": [
+                        "junior",
+                        "middle",
+                        "senior"
+                    ]
                 },
                 "text": {
                     "type": "string",
@@ -1986,9 +2022,18 @@
         "request.QuestionUpdate": {
             "type": "object",
             "required": [
+                "grade",
                 "text"
             ],
             "properties": {
+                "grade": {
+                    "type": "string",
+                    "enum": [
+                        "junior",
+                        "middle",
+                        "senior"
+                    ]
+                },
                 "text": {
                     "type": "string",
                     "maxLength": 200,
